# pyta

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
pyta/: main.py
pyta/camera/: base.py  stresing.py  virtual.py
pyta/delay/: base.py  virtual.py
pyta/processing/: acquisition.py  base.py  models.py  sweep.py
pyta/settings/: user.py
pyta/ui/: filedragdroplistwidget.py  gui.py  gui.ui  gui_update.py
tests/: test_end_to_end.py
