[tool.poetry]
name = "pyta"
version = "0.1.0"
description = "Desktop App for Transient Absorption Spectroscopy Systems"
authors = ["David Bossanyi <22292532+davidbossanyi@users.noreply.github.com>"]
packages = [
    { include = "pyta" }
]

[tool.poetry.scripts]
pyta = 'pyta.main:run'

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
h5py = "^3.8.0"
pyqtgraph = "^0.13.1"
pyqt5 = "^5.15.9"
pydantic = "^1.10.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-qt = "^4.2.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.247"
mypy = "^1.0.1"
deptry = "^0.8.0"
pyqt5-stubs = "^5.15.6.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
qt_api = "pyqt5"
testpaths = [
    "tests",
]

[tool.ruff]
extend-exclude = [".venv", "pyta/ui/gui.py"]
line-length = 127
extend-select = [
    "B",
    "C4",
    "C90",
    "E",
    "F",
    "RUF",
    "S",
    "T20",
    "UP",
    "W",
]

ignore = [
  "B008", # Do not perform function call in argument defaults
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 10


[tool.black]
line-length = 127

[tool.isort]
multi_line_output = 3
line_length = 127
profile = "black"

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disallow_untyped_defs = true
files = [
    "pyta",
]
exclude = [
    "pyta/ui",
]
