[tool.poetry]
name = "pyta"
version = "1.0.0a0"
description = "Desktop App for Transient Absorption Spectroscopy Systems"
authors = ["David Bossanyi <22292532+davidbossanyi@users.noreply.github.com>"]
packages = [
    { include = "pyta" }
]

[tool.poetry.scripts]
pyta = 'pyta.main:run'

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
h5py = "^3.9.0"
pyqtgraph = "^0.13.3"
pyqt5 = "^5.15.9"
pydantic = "^1.10.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-qt = "^4.2.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
ruff = "^0.0.277"
mypy = "^1.4.1"
deptry = "^0.12.0"
pyqt5-stubs = "^5.15.6.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
qt_api = "pyqt5"
testpaths = [
    "tests",
]

[tool.ruff]
extend-exclude = [".venv", "pyta/ui/gui.py"]
line-length = 127
extend-select = [
    "B",
    "C4",
    "C90",
    "E",
    "F",
    "I001",
    "RUF",
    "S",
    "T20",
    "UP",
    "W",
]

ignore = [
  "B008", # Do not perform function call in argument defaults
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 127

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disallow_untyped_defs = true
files = [
    "pyta",
]
exclude = [
    "pyta/ui",
]

plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "pyta.main"
disable_error_code = ["union-attr"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
